# cloud-recruitment-tasks

part_1/: main.py
part_1/test/: new_tests.py
part_2/: README.md
part_2/worker/: pyproject.toml
part_2/worker/src/: main.py
