[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = []

packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.79"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
